OpenVDB Version History
=======================

Version 8.0.1 - In Development

    Build:
    - Fixed various incorrect RPATH directory paths in CMake

Version 8.0.0 - December 23, 2020

      This version introduces ABI changes relative to older major releases,
      so to preserve ABI compatibility it might be necessary to define the
      macro OPENVDB_ABI_VERSION_NUMBER=N, where, for example, N is 6 for
      Houdini 18.0 and 7 for Houdini 18.5.

      Official release of OpenVDB AX, a new C++ library that implements a
      domain specific JIT (just-in-time) compiled expression language,
      providing users with a new way of interacting with OpenVDB data. AX is
      tailored towards writing highly parallelizable and customizable OpenVDB
      volume and point kernel operations. See the documentation for more:
      https://www.openvdb.org/documentation/doxygen/openvdbax.html

    New features:
    - Added tools::anyActiveVoxels and tools::anyActiveTiles that check
      if respectively active voxels or tiles in a tree intersect a given
      CoordBBox.
    - Added tools::activeTiles that returns a vector containing all the active
      tiles in a tree that intersects a given CoordBBox.

    Improvements:
    - Made LeafManager class non-virtual.

    Bug fixes:
    - Fixed a determinism bug in NodeManager when using non-thread-safe
      functor members.
    - Fix GridTransformer construction to use correct rotate-scale-translate
      order when recomposing matrix components.
      [Contributed by Tom Cnops].
    - OpenVDB AX: Fixed a potential code generation crash in binary, ternary
      or comma operators when errors occurred in first operand.

    ABI changes:
    - Grid::isTreeUnique() is now virtual as of ABI=8 so that it can be
      accessed from the GridBase.
    - Private method RootNode::getChildCount() has been removed as of ABI=8.
    - Mark map classes and functions as final for ABI=8 where beneficial to